fix: spacing between gallery and vertical line

--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ footer .download .download-btn {
   }
 
   .gallery {
-    margin: 25% 10%;
+    margin: 40% 10%;
   }
 
   .features {
